<resources>
    <string name="app_name">AndWallet</string>
    <string name="wallet">Wallet logo</string>
    <string name="wallet_list">Wallet List</string>
    <string name="add_item">Add Item</string>
    <string name="outcome">Outcome</string>
    <string name="income">Income</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="sum_item">Summary</string>
    <string name="save">Save</string>
    <string name="summary">Summary</string>
    <string name="balance">Balance: %1$d</string>
    <string name="deleteAll">Delete All</string>
    <string name="sumBalance">Balance: %1$d</string>
    <string name="sumExpense">Expense: %1$d</string>
    <string name="sumIncome">Income: %1$d</string>
    <string name="back">Back</string>
    <string name="pin">PIN</string>
    <string name="_0000">0000</string>
    <string name="enter">Enter</string>
</resources>