<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tvPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="#000"
        android:text="@string/pin"/>
    <EditText
        android:id="@+id/etPin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:hint="@string/_0000"
        android:inputType="numberPassword" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/btPin"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/enter"/>

</LinearLayout>